# -APP-

./: README.md
MobileAPPDevelopment/: Git方案.md  README.md  完整制作流程清单.md  工作流程.md  操作日志.md  步骤记录器v1.0  编码习惯.md  规则.md  项目索引.md
MobileAPPDevelopment/apps/step_recorder/: README.md  main.py  pyproject.toml  routes.py
MobileAPPDevelopment/apps/step_recorder/config/: __init__.py  settings.py
MobileAPPDevelopment/apps/step_recorder/i18n/: en.json  zh.json
MobileAPPDevelopment/apps/step_recorder/models/: log.py  step.py  task.py
MobileAPPDevelopment/apps/step_recorder/services/: __init__.py  log_service.py  stats_service.py  storage.py
MobileAPPDevelopment/apps/step_recorder/tests/test_models/: test_param_field.py  test_step.py
MobileAPPDevelopment/apps/step_recorder/tests/test_services/: test_log_service.py  test_stats_service.py
MobileAPPDevelopment/apps/step_recorder/tests/test_views/: test_draggable_list.py  test_home_view.py  test_log_card.py  test_log_detail_view.py  test_logs_view.py  test_notifier.py  test_param_editor.py  test_step_card.py  test_step_editor_view.py  test_step_type_picker.py  test_task_edit_view.py  test_task_tree.py
MobileAPPDevelopment/apps/step_recorder/views/: home_view.py  log_detail_view.py  logs_view.py  settings_view.py  stats_view.py  step_editor_view.py  task_edit_view.py
MobileAPPDevelopment/apps/step_recorder/views/components/: draggable_list.py  log_card.py  notifier.py  param_editor.py  step_card.py  step_type_picker.py  task_tree.py
MobileAPPDevelopment/docs/: tasks.md
MobileAPPDevelopment/scripts/: commit.ps1  (+2 more)
(+39 files in other folders)
